--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -52,7 +52,12 @@
                 <h1>Popular Lodges</h1>
                 <div id="accommodations_slider">
                   <% accommodations.each do |accommodation| %>
-                    <div class="slide"><%= link_to (image_fu accommodation.cover_image, "300x175#c") + accommodation.name, refinery.accommodations_accommodation_path(accommodation) %></div>
+                    <div class="slide">
+                      <%= link_to refinery.accommodations_accommodation_path(accommodation)  do %>                        
+                        <%= image_fu accommodation.cover_image, "300x175#c" if accommodation.cover_image.present? %> 
+                        <%= accommodation.name %>
+                      <% end %>
+                    </div>
                   <% end %>
                 </div>
               </div>
@@ -70,7 +75,12 @@
                 <h1>Popular Experiences</h1>
                 <div id="activities_slider">
                   <% activities.each do |activity| %>
-                    <div class="slide"><%= link_to (image_fu activity.cover_image, "300x175#c") + activity.name, refinery.activities_activity_path(activity) %></div>
+                    <div class="slide">
+                      <%= link_to refinery.activities_activity_path(activity)  do %>                        
+                        <%= image_fu activity.cover_image, "300x175#c" if activity.cover_image.present? %> 
+                        <%= activity.name %>
+                      <% end %>
+                    </div>
                   <% end %>
                 </div>
               </div>
