--- a/app/views/refinery/blog/shared/_posts.html.erb
+++ b/app/views/refinery/blog/shared/_posts.html.erb
@@ -1,10 +1,30 @@
+
 <% if @posts.many? %>
+<div class="blog_locations">
   <h2><%= t('.other') %></h2>
   <ul id="blog_posts">
     <% @posts.each do |blog_post| %>
       <li class='clearfix'>
-        <%= link_to blog_post.title, refinery.blog_post_path(blog_post) %>
+      <%= link_to (image_fu blog_post.image, "75x75#c") + blog_post.title, refinery.blog_post_path(blog_post) %>
+      	<div class="details">
+           <span class="date"><i class="fa fa-calendar-o"></i>&nbsp;&nbsp;<%= blog_post.published_at.strftime("%d %B %Y") %></span>&nbsp;&nbsp;|&nbsp;&nbsp;
+          <% if blog_post.comments.any? %>
+             <span class="comments"><i class="fa fa-comment-o"></i>&nbsp;&nbsp;<%= pluralize(blog_post.comments.approved.count, t('singular', :scope => 'refinery.blog.shared.comments')) %></span>
+          <% else %>
+                <span class="comments"><i class="fa fa-comment-o"></i>&nbsp;&nbsp;<%= t('none', :scope => 'refinery.blog.shared.comments') %></span>
+          <% end %>
+        </div>
       </li>
     <% end %>
   </ul>
+  </div>
 <% end %>
+
+
+
+
+
+
+
+
+
