--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -5,6 +5,7 @@
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
+  <span>MENU</span>
 </div>
 
 <nav class="nav-hide">
