--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,7 +76,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h3 {@include header_font(300); font-size:14px; color:#ffffff; letter-spacing:0;}
   .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url("../assets/overlay.png") repeat;}
   .logo,.banner-text {top:50%; margin-top:-100px; position:relative;}
-  .arrow {margin:40px auto 0 auto;}
+  .arrow {top:60%; left:50%; margin:0 0 0 -15px;}
   .arrow:hover {cursor:pointer;}
 }
 .ms-skin-default .ms-nav-prev {left:40px!important;}
