--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -17,7 +17,7 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 div1">
-                <h1>Places</h1>
+                <h1>Locations</h1>
                 <ul>
                   <% @locations.each do |location| %>
                     <li>
