--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -202,6 +202,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
     li img {margin:0 15px 10px 0; float:left;}
   }
   .details,.description {font-size:11px; line-height:11px;
+    h1 {display:none;}
     p {width:auto; line-height:16px; margin:0;}
   }
 }
