--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -100,6 +100,8 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
 }
 
+#welcome strong {color: #777777;}
+
 #people {background: url("/assets/bg-people.jpg") bottom center no-repeat; padding:100px 0 20px 0;
   .content-container .content {position:initial; transform:none; top:initial;
     .street-child {padding:5px 0; width:740px; margin:0 auto;
