--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -31,13 +31,72 @@
         </div>
       <% end %>
 
-    <% else %>
+    <% elsif @location.present? and @location.parent_id == nil %>
 
       <div id="welcome">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 div1">
                 <%=raw @location.description %>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <% child_locations = Refinery::Locations::Location.where(:parent_id => @location.id) %>
+      <% if child_locations.present? %>
+        <div class="accommodations">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>Popular Locations</h1>
+                <p><%= @location.side_body %></p>
+                <div id="accommodations_slider">
+                  <% child_locations.each do |child| %>
+                    <div class="slide">
+                      <%= link_to refinery.locations_location_path(child)  do %>
+                        <%= image_fu child.cover_image, "300x175#c" if child.cover_image.present? %>
+                        <%= child.name %>
+                      <% end %>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+
+    <% blogs = @location.posts.live.first(2) %>
+    <% if blogs.present? %>
+      <div class="location_blogs">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <h1>Location Blogs</h1>
+            </div>
+            <% blogs.each do |blog| %>
+              <div class="col-xs-6">
+                <%= link_to refinery.blog_post_path(blog)  do %>
+                  <%= image_fu blog.image, "585x450#c", :class=>"img-responsive" if blog.image.present? %>
+                  <%= blog.title %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+
+
+
+    <% else %>
+
+      <div id="welcome">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 div1">
+              <%=raw @location.description %>
             </div>
           </div>
         </div>
@@ -53,8 +112,8 @@
                 <div id="accommodations_slider">
                   <% accommodations.each do |accommodation| %>
                     <div class="slide">
-                      <%= link_to refinery.accommodations_accommodation_path(accommodation)  do %>                        
-                        <%= image_fu accommodation.cover_image, "300x175#c" if accommodation.cover_image.present? %> 
+                      <%= link_to refinery.accommodations_accommodation_path(accommodation), :remote => true do %>
+                        <%= image_fu accommodation.cover_image, "300x175#c" if accommodation.cover_image.present? %>
                         <%= accommodation.name %>
                       <% end %>
                     </div>
@@ -66,6 +125,12 @@
         </div>
       <% end %>
 
+    <!--           start           -->
+    <div class="accommodation_item"></div>
+    <!--            end             -->
+
+
+
       <% activities = Refinery::Activities::Activity.all %>
       <% if activities.present? %>
         <div class="activities">
@@ -76,8 +141,8 @@
                 <div id="activities_slider">
                   <% activities.each do |activity| %>
                     <div class="slide">
-                      <%= link_to refinery.activities_activity_path(activity)  do %>                        
-                        <%= image_fu activity.cover_image, "300x175#c" if activity.cover_image.present? %> 
+                      <%= link_to refinery.activities_activity_path(activity)  do %>
+                        <%= image_fu activity.cover_image, "300x175#c" if activity.cover_image.present? %>
                         <%= activity.name %>
                       <% end %>
                     </div>
@@ -88,7 +153,8 @@
           </div>
         </div>
       <% end %>
-    <% end %> 
+
+    <% end %>
 
     <%= render '/refinery/footer' -%>
 
